# Point-In-Polyhedron

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/: V4D_Cold-Plate_1_fine_1.stl
docs/: SOLUTION.md
src/: classifier.h  cmdline.h  constants.h  geometry.h  log.h  main.cpp  mesher.h  octree.h  ray.h  stl_parser.h  vtk.h
tests/: test.h  test_classifier.cpp  test_stl_parser.cpp
